--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Pradeep landing page.">
     <meta name="author" content="Devcrud">
-    <title>Pradeep Landing page | Free Bootstrap 4.3.x landing page</title>
+    <title>Pradeep Portfolio</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Pradeep main styles -->
