--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/backgroung.jpeg" alt="" class="brand-img">
+                    <img src="assets/imgs/profile_1.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Shanmuga Pradeep</h5>
                         <div class="brand-subtitle">Python Developer | SQL Engineer</div>
