--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with Pradeep landing page.">
     <meta name="author" content="Devcrud">
-    <title>Pradeep Portfolio</title>
+    <title>Pradeep Landing page | Free Bootstrap 4.3.x landing page</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Pradeep main styles -->
@@ -68,9 +68,16 @@
                 <h5 class="mb-3">Python Developer & SQL Engineer</h5>
                 <p class="mt-20">Responsibilities as a Python Developer</p>
                 <ul>
-                    <li>Creating Scraper script in order to scrape the datas from websites with free access</li>
-                    <li>Create a flow to clean the data and transform the datas to the desired formats like csv, excel, json e.t.c</li>
-                    <li>Automating the entire process to collect the datas in daily basis and send a mail alert on the collected datas</li>
+                    <li><b>Web scraping:</b> Writing Python scripts to extract data from websites and web pages using libraries such as BeautifulSoup or Scrapy. This may involve navigating through HTML structure, parsing data, handling pagination, handling AJAX requests, and handling different types of web content like text, images, and videos.</li>
+                    <li><b>Data extraction and transformation:</b> Extracting relevant data from web pages and transforming it into a structured format such as CSV, JSON, or a database. This may involve cleaning and formatting data, handling data validation and error handling, and handling different data types and formats.</li>
+                    <li><b>Data parsing and manipulation:</b> Parsing and manipulating data to extract specific information or perform data processing tasks such as filtering, sorting, aggregation, or joining. This may involve using Python's built-in data manipulation libraries such as Pandas or NumPy.</li>
+                    <li><b>Data storage and management:</b> Storing and managing scraped data in an organized and efficient manner, such as storing data in databases, file systems, or cloud storage. This may involve designing and implementing data storage solutions, handling data backups, and ensuring data integrity and security.</li>
+                    <li><b>Performance optimization:</b> Optimizing the performance of data scraping scripts to minimize resource usage, reduce latency, and improve scalability. This may involve optimizing web requests, handling rate limiting, implementing caching mechanisms, and optimizing data processing algorithms.</li>
+                    <li><b>Testing and debugging:</b> Testing and debugging data scraping scripts to identify and fix issues or errors. This may involve using debugging tools, conducting unit testing, and performing error handling and exception handling to ensure robustness and reliability of the scripts.</li>
+                    <li><b>Monitoring and maintenance:</b> Monitoring the performance and health of data scraping scripts, identifying and resolving issues or bugs, and performing routine maintenance tasks. This may involve setting up monitoring tools, logging and analyzing errors, and implementing automated error handling or recovery mechanisms.</li>
+                    <li><b>Keeping up with best practices and emerging technologies:</b> Staying updated with the latest best practices, techniques, and emerging technologies in web scraping and data extraction using Python, and continuously improving skills and knowledge through self-learning, research, and professional development opportunities.</li>
+                    <li><b>Adhering to legal and ethical considerations:</b> Ensuring compliance with legal and ethical considerations related to web scraping, such as respecting website terms of service, privacy policies, intellectual property rights, and data usage policies. This may involve obtaining appropriate permissions or consent for data scraping activities, and ensuring that scraped data is used responsibly and ethically.</li>
+                    <li><b>Collaboration and communication:</b> Collaborating with cross-functional teams, stakeholders, and clients to understand their data needs, gather requirements, and deliver data scraping solutions that meet their expectations. Communicating effectively and professionally with team members, clients, and other stakeholders to provide updates, report issues, and seek clarifications.</li>
                 </ul>
                 <p class="mt-20">Responsibilities as a SQL Engineer</p>
                 <ul>
@@ -78,7 +85,7 @@
                     <li>Data Loading</li>
                     <li>Filter Query writing for the front-end</li>
                 </ul>
-                <a class="btn btn-danger" role="button" href="/assets/resume/Shanmuga_pradeep_Resume.pdf" download="Shanmuga_pradeep_Resume.pdf">Download My CV</a>
+                <!-- <a class="btn btn-danger" role="button" href="/assets/resume/Shanmuga_pradeep_Resume.pdf" download="Shanmuga_pradeep_Resume.pdf">Download My CV</a> -->
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
